--- a/config/database.yml
+++ b/config/database.yml
@@ -1,26 +1,16 @@
 development:
-  adapter: postgresql
+  adapter: sqlite3 
   encoding: unicode
-  database: scorecard_development
-  host: localhost
+  database: db/development.sqlite3 
   pool: 5
-  username: scorecard 
-  password: scorecard
-
 test:
-  adapter: postgresql
-  encoding: unicode
-  database: scorecard_test
-  host: localhost
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: scorecard
-  password: scorecard
+  timeout: 5000
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  database: scorecard_production
-  host: localhost
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
-  username: scorecard
-  password: scorecard
+  timeout: 5000
